# aurora-media-player

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml  build.rs
app/src/: app.rs  i18n.rs  main.rs  mpris.rs  state.rs
app/src/player/: mod.rs  mpv.rs  pipeline.rs  render.rs
app/src/ui/: controls.rs  headerbar.rs  mod.rs  playlist.rs  video_area.rs  window.rs
build-aux/: io.github.daniacosta_dev.AuroraMediaPlayer.yml
data/: io.github.daniacosta_dev.AuroraMediaPlayer.desktop  io.github.daniacosta_dev.AuroraMediaPlayer.metainfo.xml
data/resources/: resources.gresource.xml  style.css
docs/: index.html
snap/: snapcraft.yaml
snap/gui/: aurora-media-player.desktop
